Do not use _lineProperties.at(line) where line might be too large

Use an access function that returns a default line property when
the line may be outside the screen.

BUG: 466874